--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha tests/*.js"
+    "test": "mocha tests/*.js --exit"
   },
   "keywords": [],
   "author": "",
