--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,10 @@ jobs:
           name: Build Docker image
           command: docker build -t arminnuk/node-app:latest .
 
-    -run:
-      name: Run
-      command: docker run -p 3004:3004 node-app:latest
+      # Pokretanje Docker kontejnera
+      - run:
+          name: Run Docker container
+          command: docker run -p 3004:3004 arminnuk/node-app:latest
 
       # Pushovanje Docker image-a na Docker Hub (opciono)
       # Ako želite da pushujete sliku na Docker Hub, otkomentarišite sledeće korake
@@ -36,4 +37,3 @@ jobs:
 
       # Dodajte ovde korake za deployovanje na ciljnom serveru
 # ...
-
